--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,7 +9,7 @@ html {
     color: #555;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 18px;
      /*helps to render in perfect way*/
     text-rendering: optimizeLegibility; 
 }
@@ -27,10 +27,26 @@ html {
      padding-bottom:50px;
 }
 
-section {
-    padding: 180px 0;
+.header {
+   display: inline-block;
+}
+.header h1 {
+    text-align: left;
 }
 
+section {
+    padding: 0;
+}
+
+a { 
+     color: #000000;   
+     text-decoration: none;
+}
+
+a:hover {
+    color: #00a0e3;    
+    text-decoration: underline;
+}
 
 h1 {
     font-weight: 400;
@@ -39,7 +55,6 @@ h1 {
     font-size: 200%;
     word-spacing: 2px;
     letter-spacing: 1px;
-    text-align: center;
     /*margin: 0;*/
     margin-bottom: 20px;
 }
@@ -49,7 +64,6 @@ h3 {
     font-size: 100%;
     word-spacing: 2px;
     letter-spacing: 1px;
-    text-align: center;
     /*margin: 0;*/
     margin-bottom: 20px;
 }
@@ -96,17 +110,22 @@ button:hover {
 table,
 th,
 td {
-    border: 1px solid #000000;
-    padding: 10px;
+    /*border: 1px solid #000000;*/
+    border: none;
+    padding: 1px;
     border-collapse: collapse;
-
-    
 }
 table {
     table-layout: fixed;
-    max-width: 800px;
-    width: 100%
+    width: 100%;
 }
+
+@media screen and (max-width: 600px) {
+  table {
+      width:600px
+  }
+}
+
 
 td {
     word-wrap: break-word;
@@ -115,7 +134,7 @@ td {
 thead,
 tfoot {
     background-color: #e8e8e8;
-    color: #fff;
+    /*color: #fff;*/
 }
 
 .center-table {
@@ -124,7 +143,7 @@ tfoot {
 
 .table-head {
     font-weight: 400;
-    background-color: #e6fff7;
+    background-color: #E1F9FF;
 }
 
 
@@ -149,4 +168,83 @@ img {
 i {
     
     font-weight: 400;
+}
+
+.spec-background-green {
+    border: none;
+    display: inline-block;
+    border-radius: 50%;
+    padding: 3px 3px;
+    height: 30px;
+    width: 30px;
+    background-color: green;
+    margin: 5px;
+}
+.spec-background-red {
+    border: none;
+    display: inline-block;
+    border-radius: 50%;
+    padding: 3px 3px;
+    height: 30px;
+    width: 30px;
+    background-color: red;
+    margin: 5px;
+}
+
+
+.spec-image {
+    border: none;
+    display: inline-block;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    padding: 3px 3px;
+    background-color: orange;
+    margin: 5px;
+}
+
+.spec-alt-text {
+    border: 1px solid black;
+    display: inline-block;
+    border-radius: 5%;
+    /*height: 30px;*/
+    width: auto;
+    padding: 3px 3px;
+    margin: 5px;
+    /*background-color: gray;*/
+}
+
+
+.ui-tooltip-content {
+    colore: red;
+}
+
+
+mark {
+    background-color: #f0ad4e;
+}
+.mark {
+  padding: 0;
+  background: transparent;
+  background: linear-gradient(to right, #f0ad4e 50%, transparent 50%);
+  background-position: right bottom;
+  background-size: 200% 100%;
+  transition: all .5s ease;
+  color: #fff;
+}
+
+.mark.animate {
+  background-position: left bottom;
+  color: #000;
+}
+
+
+span {
+    padding-bottom: 10px;
+}
+
+.center-jumbotron {
+    margin: 0 auto;
+    padding-top: 10%;
+    background-color: white;
 }
