--- a/views/routes/links.ejs
+++ b/views/routes/links.ejs
@@ -1,93 +1,248 @@
-<% include ../partials/header %>
+<% include ../partials/header
+//for the color of the circle
+// var x = null;
+// var classClr = null;
+// var clr = null;
+// var sColor = "green";
+// var hColor = "red";
+%>
     <!--http://troncdev.com/email-enewspaper-refresh/template.php?market=la&version=1&type=acquisition-->
 <section>
-    <div>
-        <h3>
-            URL is: <%= Objlink.url1 %>
-        </h3>
-        <table class="center-table">
-            <thead>
-                <tr>
-                    <th colspan="3">
-                         <h1>Links present on the webpage</h1>    
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="table-head">
-                    <td> # </td>
-                    <td>a tag URL</td>
-                    <td> Secure  </td>
-                </tr>
-                <% Objlink.arrLinks.forEach(function(ele){ %>
-                    <tr>
-                        <td>
-                            <li></li>
-                        </td>
-                        <td>
-                            <a target="_blank" href="<%=ele%>"><%=ele%></a>
-                        </td>
-                        <td>
-                             <%
-                                const secure = ele;
-                                var x = null;
-                                if(secure.match(/https/g)){
-                               
-                                    x = true;
-                                } else {
-                                    x = false;
-                                } %>
-                            <i style="color: red"><%= x %></i>
-                        </td>
-                    </tr>
-                <% }); %>
-            </tbody>
-        </table>
-    </div>
-    <hr>
-    <div>
-         <table class="center-table">
-            <thead>
-                <tr>
-                    <th colspan="4">
-                        <h1>Image alt tags present on the web page</h1>
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="table-head">
-                    <td>Image</td>
-                    <td>Image Source</td>
-                    <td>Secure</td>
-                    <td>Image Alt text</td>
+   
+ 
+    
+    <div class="container">
+    
+        
+       <div class="jumbotron">
+           <h1>Extractor App</h1>
+            <a class="btn btn-primary btn-lg"  href="/routes/new" role="button">New</a>
+            <h5>
+                    URL is: <a target="_blank" href="<%= Objlink.url1 %>"><%= Objlink.url1 %></a>
+            </h5>
+            
+            
+                <!--console.log("market is :", Objlink.url1);-->
+                <% 
+                    console.log("market is ", Objlink.market);
                     
+                    if (Objlink.market == "bs"){
+                        var tracking = "5";
+                         trackflag  = true;
+                    } else if(Objlink.market == "cg") {
+                        var tracking = "10";
+                         trackflag  = true;
+                    } else if(Objlink.market == "ct") {
+                        var tracking = "2";
+                         trackflag  = true;
+                    } else if(Objlink.market == "dp") {
+                        var tracking = "7";
+                         trackflag  = true;
+                    } else if(Objlink.market == "hc") {
+                        var tracking = "6";
+                         trackflag  = true;
+                    } else if(Objlink.market == "la") {
+                        var tracking = "1";
+                         trackflag  = true;
+                    } else if(Objlink.market == "mc") {
+                        var tracking = "8";
+                         trackflag  = true;
+                    } else if(Objlink.market == "ny") {
+                        var tracking = "32";
+                         trackflag  = true;
+                    } else if(Objlink.market == "os") {
+                        var tracking = "3";
+                         trackflag  = true;
+                    } else if(Objlink.market == "sd") {
+                        var tracking = "18";
+                         trackflag  = true;
+                    } else if(Objlink.market == "ss") {
+                        var tracking = "4";
+                         trackflag  = true;
+                    } else if(Objlink.market == "vp") {
+                        //add tracking
+                        var tracking = "36";
+                         trackflag  = true;
+                    }else
+                    {
+                        trackflag = false;
+                    }
+                    
+                %>
+        
+            
+            <h5> Type in a keyword:</h5> <input type="text" name="keyword" class="form-control input-sm" value="cw_pbrd=<%=tracking%> PID">
+            
+            
+            <!--<div>Enter PID <input type="text" name="keyword" class="form-control input-sm" placeholder="Enter tracking data"></div>-->
+            Secure [http]: <a class="spec-background-green" style="color:white; text-align: center;font-weight:800"> S </a>
+            Non - Secure [http]: <a class="spec-background-red" style="color:white; text-align: center;font-weight:800"> H </a>
+            Image <a class="spec-image" style="color:white; text-align: center;font-weight:800"> I </a>
+            Alt text present? <a class="spec-background-red" style="color:white; text-align: center;font-weight:800"> alt </a>
+            Alt text <a class="spec-alt-text"> Alt text </a>
+            
+            
+    </div>
+    
+            
+            
+        <table class="center-table table">
+            
+                <thead class="thead-dark">
+                    <tr>
+                    <th>a tag URL</th>
+                    <th> Specs</th>
                 </tr>
-               <% Objlink._imgSrc.forEach(function(ele){ %>
+                </thead>
+                
+                <% Objlink.arrLinks.forEach(function(ele){ 
+                     var x = null;
+                     var classClr = null;
+                     var clr = null;
+                     var sColor = "green";
+                     var hColor = "red";
+                %>
                     <tr>
                         <td>
-                            <a target=_blank href="<%=ele[0]%>"><img src="<%=ele[0]%>"></a>
+                            
+                            <script>
+                                //highlight the PID
+                            $(function() {
+                                
+                                  var mark = function() {
+                                
+                                    // Read the keyword
+                                    var keyword = $("input[name='keyword']").val();
+                                
+                                    // Determine selected options
+                                    var options = {
+                                      "each": function(element) {
+                                        setTimeout(function() {
+                                          $(element).addClass("animate");
+                                        }, 250);
+                                      }
+                                    };
+                                    // Mark the keyword inside the context
+                                    $(".context").unmark({
+                                      done: function() {
+                                        $(".context").mark(keyword, options);
+                                      }
+                                    });
+                                  };
+                                  $("input[name='keyword']").on("keyup", mark);
+                                //   $("input[type='checkbox']").on("change", mark);
+                                  mark();
+                                });
+
+
+                                // //hard coded tracking
+                                //  $(".context").mark("PID");
+                                //  $(".context").mark("cw_pbrd=");
+                                //  $(".context").mark("black-friday-cyber-monday");
+                                 
+                                 
+                            </script>
+                            
+                          <%    //decode the URL
+                                var decodeURL  = decodeURIComponent(ele);
+                                //console.log("decoded URL is:  ",  decodeURIComponent(ele));
+                            %>
+                            
+                            <li><a class="context" target="_blank" href="<%=decodeURL%>"> <%=decodeURL%></a></li>
                         </td>
                         <td>
-                             <a target=_blank href="<%=ele[0]%>">  <%=ele[0]%>  </a>
                              <%
-                                const secure = ele[0];
-                                var x = null;
+                             //console.log( "ele lenght is", ele.length ); 
+                                const secure = ele;
                                 if(secure.match(/https/g)){
-                                    x = true;
+                                    x = "S";
+                                    // console.log("sColor", sColor);
+                                    clr = sColor;
+                                    classClr = "spec-background-green";
                                 } else {
-                                    x = false;
-                                } %>
-                        </td>
-                        <td>
-                            <i style="color: red"><%= x %></i>
-                        </td>
-                        
-                        <td>
-                             <%=ele[1]%>
+                                    x = "H";
+                                    clr = hColor;
+                                    // console.log("hColor", hColor);
+                                    classClr = "spec-background-red";
+                                } 
+                                %>
+                            <table>
+                                <td>
+                                    <a class="<%= classClr%>" style="color:white; text-align: center;font-weight:800"><%= x %></a>
+                                    <!--trackig data-->
+                                    <%
+                                        if(trackflag == true){
+                                            classClr = "spec-background-green";
+                                        }else {
+                                            classClr = "spec-background-red";
+                                        }
+                                    %>
+                                    <a title="Hemant" class="<%= classClr%>" style="color:white; text-align: center;font-weight:800"> T </a>
+                                </td>    
+                            </table>
+                            
                         </td>
                     </tr>
                 <% }); %>
-            </tbody>
+                
+                <% Objlink._imgSrc.forEach(function(ele){
+                
+                    var x = null;
+                     var classClr = null;
+                     var clr = null;
+                     var sColor = "green";
+                     var hColor = "red";
+                 %>
+                    <tr>
+                        <td>
+                            <li> <a target=_blank href="<%=ele[0]%>">  <%=ele[0]%>  </a></li>
+                             <%
+                                
+                                const secure = ele[0];
+                                // var x = null;
+                                if(secure.match(/https/g)){
+                                    x = "S";
+                                    clr = sColor;
+                                    classClr = "spec-background-green";
+                                } else {
+                                    x = "H";
+                                    clr = hColor;
+                                    classClr = "spec-background-red";
+                                }
+                            %>
+                        </td>
+                        <td>
+                            <table>
+                                <tr>
+                                    <a class="<%= classClr%>" style="color:white; text-align: center;font-weight:800"><%= x %></a>
+                                    <a class="spec-image" style="color:white; text-align: center;font-weight:800"> I </a>
+                                    <%  
+                                    
+                                    if(ele[1].length == 0 ) {
+                                    
+                                    // console.log("length:" , ele[1].length);
+                                    %>
+                                        <a class="spec-background-red" style="color:white; text-align: center;font-weight:800"> alt </a>
+                                    <% }else{ %>
+                                    
+                                    
+                                        
+                                        <span>
+                                            <a title="Hemant" class="spec-background-green" style="color:white; text-align: center;font-weight:800"> alt </a>
+                                            <!--display alt text-->
+                                            <a class="spec-alt-text"> <%=ele[1]%> </a>
+                                        </span>
+                                        
+                                        
+                                    <% } %>
+                                   
+                                </tr>
+                            </table>
+                            
+                        </td>
+                       
+                    </tr>
+                <% }); %>
         </table>
     </div>
 </section>
