fixed the href for ele a tag

--- a/views/routes/links.ejs
+++ b/views/routes/links.ejs
@@ -148,7 +148,7 @@
                                 //console.log("decoded URL is:  ",  decodeURIComponent(ele));
                             %>
                             
-                            <li><a class="context" target="_blank" href="<%=decodeURL%>"> <%=decodeURL%></a></li>
+                            <li><a class="context" target="_blank" href="<%=ele%>"> <%=decodeURL%></a></li>
                         </td>
                         <td>
                              <%
