--- a/views/routes/links.ejs
+++ b/views/routes/links.ejs
@@ -76,10 +76,12 @@
             
             <!--<div>Enter PID <input type="text" name="keyword" class="form-control input-sm" placeholder="Enter tracking data"></div>-->
             Secure [http]: <a class="spec-background-green" style="color:white; text-align: center;font-weight:800"> S </a>
+            Tracking [cw_pbrd="value"]: <a class="spec-background-green" style="color:white; text-align: center;font-weight:800"> T </a>
             Non - Secure [http]: <a class="spec-background-red" style="color:white; text-align: center;font-weight:800"> H </a>
             Image <a class="spec-image" style="color:white; text-align: center;font-weight:800"> I </a>
             Alt text present? <a class="spec-background-red" style="color:white; text-align: center;font-weight:800"> alt </a>
             Alt text <a class="spec-alt-text"> Alt text </a>
+            
             
             
     </div>
