added read me how to use

--- a/views/routes/links.ejs
+++ b/views/routes/links.ejs
@@ -9,12 +9,16 @@
     <!--http://troncdev.com/email-enewspaper-refresh/template.php?market=la&version=1&type=acquisition-->
 <section>
    
- 
-    
+   
     <div class="container">
     
+       
         
        <div class="jumbotron">
+           <div  style="text-align:right">
+               <span><h5><a href="https://github.com/tribpubdev/app-extractor/blob/master/README.md">How to use?</a></h5></span>
+           </div>
+            
            <h1>Extractor App</h1>
             <a class="btn btn-primary btn-lg"  href="/routes/new" role="button">New</a>
             <h5>
