added how to use at new.ejs

--- a/views/routes/new.ejs
+++ b/views/routes/new.ejs
@@ -1,6 +1,11 @@
 <% include ../partials/header %>
 <section>
+    <span><h5 style="text-align: right; margin-right:10px"><a href="https://github.com/tribpubdev/app-extractor/blob/master/README.md">How to use?</a></h5></span>
     <div class="jumbotron center-jumbotron">
+        <div  style="text-align:center">
+               <!--<span><h5><a href="https://github.com/tribpubdev/app-extractor/blob/master/README.md">How to use?</a></h5></span>-->
+           </div>
+            
         <row>
             <content>
                 <h1 style="text-align: center">Enter a valid URL:</h1>
