--- a/views/routes/links.ejs
+++ b/views/routes/links.ejs
@@ -30,13 +30,13 @@
                 <% 
                     var trackflag = null;
                 
-                    console.log("market is ", Objlink.market);
+                  //  console.log("market is ", Objlink.market);
                     
                     if (Objlink.market == "bs"){
                         
                         var tracking = "5";
                          trackflag  = true;
-                         console.log("trackflag in if bs", trackflag);
+                       //  console.log("trackflag in if bs", trackflag);
                     } else if(Objlink.market == "cg") {
                         var tracking = "10";
                          trackflag  = true;
@@ -52,7 +52,7 @@
                     } else if(Objlink.market == "la") {
                         var tracking = "1";
                         //  trackflag  = true;
-                         console.log("trackflag in if la", trackflag);
+                       //  console.log("trackflag in if la", trackflag);
                     } else if(Objlink.market == "mc") {
                         var tracking = "8";
                          trackflag  = true;
@@ -184,7 +184,7 @@
                                     <%
                                     // console.log("trackflag:", trackflag);
                                     var temp =  "cw_pbrd" + "=" + tracking;
-                                    console.log("temp",temp);
+                                    //console.log("temp",temp);
                                     
                                         if(ele.includes(temp)){
                                             classClr = "spec-background-green";
