fixed app crash

--- a/views/routes/new.ejs
+++ b/views/routes/new.ejs
@@ -8,6 +8,14 @@
             
         <row>
             <content>
+               <!--<% //if(error && error.length > 0) { %>-->
+               <!-- <div class="alert alert-danger" role="alert">-->
+                <!--//show error message-->
+               <!--  <%= //error %>-->
+               <!--  </div>-->
+               <!-- <% //} %> -->
+  
+
                 <h1 style="text-align: center">Enter a valid URL:</h1>
                 <p>e.g. https://www.latimes.com</p>
                     <form class="form-center" action="/routes/links" method="post">
