added read me pdf file extractor 1.2.0.pdf

--- a/views/routes/links.ejs
+++ b/views/routes/links.ejs
@@ -16,7 +16,7 @@
         
        <div class="jumbotron">
            <div  style="text-align:right">
-               <span><h5><a href="https://github.com/tribpubdev/app-extractor/blob/master/README.md">How to use?</a></h5></span>
+               <span><h5><a  target="_blank" href="/lib/extractor%201.2.0.pdf">How to use?</a></h5></span>
            </div>
             
            <h1>Extractor App</h1>
