--- a/views/routes/new.ejs
+++ b/views/routes/new.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 <section>
-    <span><h5 style="text-align: right; margin-right:10px"><a href="https://github.com/tribpubdev/app-extractor/blob/master/README.md">How to use?</a></h5></span>
+    <span><h5 style="text-align: right; margin-right:10px"><a target="_blank" href="/lib/extractor%201.2.0.pdf">How to use?</a></h5></span>
     <div class="jumbotron center-jumbotron">
         <div  style="text-align:center">
                <!--<span><h5><a href="https://github.com/tribpubdev/app-extractor/blob/master/README.md">How to use?</a></h5></span>-->
