changed the title

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@ github: Hemantc09-->
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CrawlMe</title>
+        <title>extractor 1.2.0</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto" rel="stylesheet">
